[package]
name = "dx-turnstile"
version = "0.1.0"
authors = ["axumrs <rolson867@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
reqwest = { version = "0.13.4", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
